--- a/index.html
+++ b/index.html
@@ -2,26 +2,86 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Your Website</title>
+  <title>gridpak</title>
 	
  <link rel="icon" href="favicon.ico">	
  
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/grid.css">				
+  <link rel="stylesheet" href="css/gridpak.css">
+  				
   <link rel="stylesheet" href="css/styles.css">	
 	
 </head>
 <body>
-	
-	<div class="container showgrid">
+	<div class="page">
+
+		<!--header and nav -->
+		<div class="row">
+			<div class="span_3 col">
+				<h1>website</h1>
+			</div>
+			<div class="span_9 col"></div>
+				<nav>
+					<ul>
+						<li><a href="#">linky</a></li>
+						<li><a href="#">linky</a></li>
+						<li><a href="#">linky</a></li>
+					</ul>
+				</nav>
+			</div>
+
+		</div>
+		<!--content -->
+		<div class="row">
+			<article class="span_6 col">
+				<h3>column 1</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</article>
+			<article class=" span_3 col">
+				<h3>column 2</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</article>
+			<article class="span_3 col">
+				<h3>column 3</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</article>
+
+		</div>
+		<!--footer -->
+		<div class="row">
+			<foot class="col">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</foot>
+		</div>
+
+
+
+
+
+
+<!--- end of grid system -->
+	</div>	
 		
-		<!-- Your Content -->
-		<h1>Your Website</h1>
-
-		<!-- Clearfix -->
-		<div class="clear"></div>
-
-	</div>
 	
   
 </body>
