--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!doctype html>
 <html lang="en">
+
 <head>
+
   <meta charset="UTF-8" />
   <title>gridpak</title>
-	
- <link rel="icon" href="favicon.ico">	
- 
+  <link rel="icon" href="favicon.ico">	
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/gridpak.css">
-  				
+  <link rel="stylesheet" href="css/gridpak.css">			
   <link rel="stylesheet" href="css/styles.css">	
 	
 </head>
+
 <body>
 	<div class="page">
 
@@ -71,14 +71,8 @@
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			</foot>
+			</footer>
 		</div>
-
-
-
-
-
-
 <!--- end of grid system -->
 	</div>	
 		
